// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VisuallyHidden> should add styles: With child styles 1`] = `
<DocumentFragment>
  <span
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute; text-align: center;"
  >
    Foo
  </span>
</DocumentFragment>
`;

exports[`<VisuallyHidden> should add styles: Without child styles 1`] = `
<DocumentFragment>
  <span
    style="border: 0px; height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; position: absolute;"
  >
    Foo
  </span>
</DocumentFragment>
`;
